--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <header class=" ml-60 mr-60">
         <!-- navigation bar design  -->
-        <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
+        <nav class="lg:bg-[#F85559] md:bg-white border-2 border-[#F85559] lg:rounded-full md:rounded-sm text-white">
             <div class="navbar justify-between items-stretch">
-                <div class="w-1/3 pl-14">
+                <div class="lg:w-1/3 lg:pl-14">
                     <ul class="flex">
                         <li class="pr-5 pl-5">Home</li>
                         <li class="pr-5 pl-5">About Us</li>
@@ -56,18 +56,18 @@
                     </ul>
                 </div>
 
-                <div class="w-1/3 justify-center">
+                <div class="lg:w-1/3 lg:justify-center md:1/2">
                     <img src="images/logo.png" alt="" class="mr-2">
                     <h1>Fruit Burst</h1>
                 </div>
 
-                <div class="w-1/3 flex-row justify-center relative pr-5">
+                <div class="lg:w-1/3 md:1/2 flex-row justify-center relative pr-5">
                     <input type="text" placeholder="Search here" class="input rounded-full w-full" />
                     <i class="fa-solid fa-magnifying-glass absolute right-9" style="color: #000000;"></i>
                 </div>
-
             </div>
         </nav>
+
     </header>
 
 
@@ -178,7 +178,7 @@
             </div>
 
             <!-- Cards part  -->
-            <div class="flex flex-row gap-6 justify-center mt-12">
+            <div class="flex lg:flex-row md:flex-col gap-6 justify-center mt-12">
                 <!-- card 1  -->
                 <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
                     <div class="card-body flex flex-col items-center">
@@ -346,7 +346,7 @@
                                 <img src="images/fruit9.png" alt="" class="" />
                                 <h1 class="text-5xl font-extrabold mt-6">Banana</h1>
                                 <h1 class="text-xl font-medium mt-6 text-center">A banana is an elongated, edible fruit
-                                    – botanically a berry – produced by several kinds of large herbaceous flowering
+                                    botanically a berry produced by several kinds of large herbaceous flowering
                                     plants in the genus Musa. </h1>
                                 <div class="mt-6">
                                     <i class="fa-solid fa-star primary_color"></i>
