--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <header class=" ml-60 mr-60">
         <!-- navigation bar design  -->
-        <nav class="lg:bg-[#F85559] md:bg-white border-2 border-[#F85559] lg:rounded-full md:rounded-sm text-white">
+        <nav class="bg-[#F85559] border-2 border-[#F85559] rounded-full text-white">
             <div class="navbar justify-between items-stretch">
                 <div class="lg:w-1/3 lg:pl-14">
                     <ul class="flex">
@@ -178,7 +178,7 @@
             </div>
 
             <!-- Cards part  -->
-            <div class="flex lg:flex-row md:flex-col gap-6 justify-center mt-12">
+            <div class="flex flex-row gap-6 justify-center mt-12">
                 <!-- card 1  -->
                 <div class="card-normal bg-base-100 shadow-xl border-2 rounded-xl w-1/4">
                     <div class="card-body flex flex-col items-center">
